--- a/src/main/resources/com/example/knk_grupi22/dashboard.fxml
+++ b/src/main/resources/com/example/knk_grupi22/dashboard.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.knk_grupi22.DashboardController"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.knk_grupi22.DashboardController">
+   <left>
+      <AnchorPane prefHeight="790.0" prefWidth="345.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="78.0" layoutY="256.0" mnemonicParsing="false" text="Dashboard" />
+            <FontAwesomeIcon glyphName="HOME" layoutX="34.0" layoutY="282.0" size="3em" />
+            <Button fx:id="logout_Btn" layoutX="13.0" layoutY="714.0" mnemonicParsing="false" onAction="#logout" prefHeight="40.0" prefWidth="39.0" style="-fx-cursor: hand;">
+               <graphic>
+                  <FontAwesomeIcon glyphName="SIGN_OUT" size="2em" />
+               </graphic>
+            </Button>
+            <Label layoutX="67.0" layoutY="720.0" text="Sign Out">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </left>
+</BorderPane>
