--- a/src/main/resources/com/example/knk_grupi22/home.fxml
+++ b/src/main/resources/com/example/knk_grupi22/home.fxml
@@ -12,23 +12,22 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.knk_grupi22.LoginController">
    <right>
-      <AnchorPane prefHeight="400.0" prefWidth="286.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="400.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <FontAwesomeIcon glyphName="USER" layoutX="49.0" layoutY="145.0" size="2em" />
-            <TextField layoutX="75.0" layoutY="124.0" promptText="Username" />
-            <FontAwesomeIcon glyphName="LOCK" layoutX="50.0" layoutY="189.0" size="2em" />
-            <PasswordField layoutX="75.0" layoutY="168.0" promptText="Password" />
-            <Button fx:id="login_Btn" layoutX="173.0" layoutY="212.0" mnemonicParsing="false" style="-fx-cursor: hand;" text="Log In" />
+            <FontAwesomeIcon fill="#2e07f2" glyphName="USER" layoutX="49.0" layoutY="145.0" size="2em" />
+            <TextField fx:id="tf_Username" layoutX="75.0" layoutY="124.0" promptText="Username" />
+            <FontAwesomeIcon fill="#2e07f2" glyphName="LOCK" layoutX="50.0" layoutY="189.0" size="2em" />
+            <PasswordField fx:id="tf_Password" layoutX="75.0" layoutY="168.0" promptText="Password" />
+            <Button fx:id="login_Btn" layoutX="173.0" layoutY="212.0" mnemonicParsing="false" onAction="#switchForm" style="-fx-cursor: hand;" text="Log In" />
             <CheckBox layoutX="50.0" layoutY="216.0" mnemonicParsing="false" text="Remember me" />
-            <Label layoutX="68.0" layoutY="331.0" style="-fx-text-fill: blue;" text="Not registered?">
+            <Label layoutX="58.0" layoutY="331.0" style="-fx-text-fill: black;" text="Not registered?">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button layoutX="169.0" layoutY="318.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: transparent; -fx-cursor: hand; -fx-text-fill: red;" text="Sign up">
+            <Button fx:id="signup_Btn" layoutX="151.0" layoutY="318.0" mnemonicParsing="false" onAction="#signUp" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: transparent; -fx-cursor: hand; -fx-text-fill: blue;" text="Sign up">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -38,22 +37,23 @@
                   <Font size="16.0" />
                </font>
             </Label>
+            <Button layoutX="52.0" layoutY="248.0" mnemonicParsing="false" prefHeight="2.0" prefWidth="172.0" style="-fx-background-color: transparent; -fx-text-fill: blue; -fx-cursor: hand;" text="Forgot your password?" />
          </children>
       </AnchorPane>
    </right>
    <center>
-      <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: blue;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="82.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../../Downloads/download.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="99.0" layoutY="249.0" text="E-Alumni">
+            <Label layoutX="88.0" layoutY="248.0" text="E-Alumni" textFill="WHITE">
                <font>
-                  <Font name="Tahoma Bold" size="25.0" />
+                  <Font name="Tahoma Bold" size="27.0" />
                </font>
             </Label>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="75.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../img/fiek-logo-photoaidcom-cropped.jpg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </center>
