--- a/src/main/resources/com/example/knk_grupi22/sign-up.fxml
+++ b/src/main/resources/com/example/knk_grupi22/sign-up.fxml
@@ -3,6 +3,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,8 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.knk_grupi22.SignupController">
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="261.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="CENTER">
          <children>
@@ -31,27 +31,46 @@
    <center>
       <AnchorPane prefHeight="400.0" prefWidth="506.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="25.0" layoutY="142.0" text="First Name" />
-            <Label layoutX="254.0" layoutY="142.0" text="Last Name" />
-            <TextField layoutX="98.0" layoutY="138.0" prefHeight="26.0" prefWidth="146.0" />
-            <TextField layoutX="314.0" layoutY="137.0" prefHeight="26.0" prefWidth="138.0" />
-            <FontAwesomeIcon fill="#32009e" glyphName="USER_PLUS" layoutX="213.0" layoutY="80.0" size="5em" />
-            <Label layoutX="54.0" layoutY="183.0" text="Email" />
-            <Label layoutX="29.0" layoutY="223.0" text="Password" />
-            <Label layoutY="261.0" text="Phone Number" />
-            <TextField layoutX="99.0" layoutY="179.0" prefHeight="26.0" prefWidth="238.0" />
-            <TextField layoutX="99.0" layoutY="219.0" />
-            <TextField layoutX="99.0" layoutY="257.0" />
-            <Button layoutX="99.0" layoutY="317.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="274.0" text="Sign up" />
+            <Label layoutX="29.0" layoutY="107.0" prefHeight="18.0" prefWidth="59.0" text="First Name">
+               <font>
+                  <Font name="Arial" size="12.0" />
+               </font></Label>
+            <Label layoutX="247.0" layoutY="108.0" text="Last Name">
+               <font>
+                  <Font name="Arial" size="12.0" />
+               </font></Label>
+            <TextField fx:id="firstName" layoutX="91.0" layoutY="103.0" prefHeight="26.0" prefWidth="146.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="lastName" layoutX="307.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <FontAwesomeIcon fill="#109152" glyphName="USER_PLUS" layoutX="212.0" layoutY="65.0" size="5em" />
+            <Label layoutX="49.0" layoutY="149.0" prefHeight="18.0" prefWidth="34.0" style="-fx-font-family: Arial;" text="Email" />
+            <Label layoutX="33.0" layoutY="230.0" style="-fx-font-family: Arial;" text="Password" />
+            <Label layoutX="5.0" layoutY="266.0" style="-fx-font-family: Arial;" text="Phone Number" />
+            <TextField fx:id="email" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="241.0" promptText="example@gmail.com" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="phoneNum" layoutX="91.0" layoutY="261.0" prefHeight="27.0" prefWidth="241.0" promptText="xxx-xxx-xxx" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <Button fx:id="signUpBtn" layoutX="99.0" layoutY="321.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="274.0" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Sign up" textFill="WHITE" />
             <Label layoutX="124.0" layoutY="362.0" style="-fx-text-fill: black;" text="Already have an account?">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button layoutX="273.0" layoutY="349.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="74.0" style="-fx-background-color: transparent; -fx-cursor: hand; -fx-text-fill: blue; -fx-font-weight: bold;" text="Log in">
+            <Button layoutX="282.0" layoutY="349.0" mnemonicParsing="false" onAction="#switchToLogin" prefHeight="46.0" prefWidth="65.0" style="-fx-background-color: transparent; -fx-text-fill: #109152; -fx-cursor: hand;" text="Log in">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
+            </Button>
+            <PasswordField fx:id="password" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="username" layoutX="91.0" layoutY="186.0" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <Label layoutX="32.0" layoutY="191.0" style="-fx-font-family: Arial;" text="Username" />
+            <TextField fx:id="textfieldPassword" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../../../css/signup.css" visible="false" />
+            <Button fx:id="buttonShowPassword" layoutX="303.0" layoutY="226.0" mnemonicParsing="false" onAction="#showPassword" prefHeight="26.0" prefWidth="30.0" style="-fx-background-color: transparent; -fx-cursor: hand;">
+               <graphic>
+                  <FontAwesomeIcon glyphName="EYE" />
+               </graphic>
+            </Button>
+            <Button fx:id="hideBtn" layoutX="303.0" layoutY="226.0" mnemonicParsing="false" onAction="#hidePassword" prefHeight="26.0" prefWidth="30.0" style="-fx-background-color: transparent;" visible="false">
+               <graphic>
+                  <FontAwesomeIcon glyphName="EYE" />
+               </graphic>
             </Button>
          </children>
       </AnchorPane>
