--- a/src/main/resources/com/example/knk_grupi22/sign-up.fxml
+++ b/src/main/resources/com/example/knk_grupi22/sign-up.fxml
@@ -47,7 +47,7 @@
             <Label layoutX="5.0" layoutY="266.0" style="-fx-font-family: Arial;" text="Phone Number" />
             <TextField fx:id="email" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="241.0" promptText="example@gmail.com" styleClass="btn" stylesheets="@../../../css/signup.css" />
             <TextField fx:id="phoneNum" layoutX="91.0" layoutY="261.0" prefHeight="27.0" prefWidth="241.0" promptText="xxx-xxx-xxx" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <Button fx:id="signUpBtn" layoutX="99.0" layoutY="321.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="274.0" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Sign up" textFill="WHITE" />
+            <Button fx:id="signUpBtn" layoutX="99.0" layoutY="321.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="274.0" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Sign up" textFill="WHITE" />
             <Label layoutX="124.0" layoutY="362.0" style="-fx-text-fill: black;" text="Already have an account?">
                <font>
                   <Font size="14.0" />
@@ -67,11 +67,12 @@
                   <FontAwesomeIcon glyphName="EYE" />
                </graphic>
             </Button>
-            <Button fx:id="hideBtn" layoutX="303.0" layoutY="226.0" mnemonicParsing="false" onAction="#hidePassword" prefHeight="26.0" prefWidth="30.0" style="-fx-background-color: transparent;" visible="false">
+            <Button fx:id="hideBtn" layoutX="303.0" layoutY="226.0" mnemonicParsing="false" onAction="#hidePassword" prefHeight="26.0" prefWidth="30.0" style="-fx-background-color: transparent; -fx-cursor: hand;" visible="false">
                <graphic>
                   <FontAwesomeIcon glyphName="EYE" />
                </graphic>
             </Button>
+            <Label fx:id="phoneNumLabel" layoutX="348.0" layoutY="265.0" text="Incorrect Format" visible="false" />
          </children>
       </AnchorPane>
    </center>
