--- a/src/main/resources/com/example/knk_grupi22/sign-up.fxml
+++ b/src/main/resources/com/example/knk_grupi22/sign-up.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.knk_grupi22.SignupController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignupController">
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="261.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="CENTER">
          <children>
@@ -44,9 +44,7 @@
             <FontAwesomeIcon fill="#109152" glyphName="USER_PLUS" layoutX="212.0" layoutY="65.0" size="5em" />
             <Label layoutX="49.0" layoutY="149.0" prefHeight="18.0" prefWidth="34.0" style="-fx-font-family: Arial;" text="Email" />
             <Label layoutX="33.0" layoutY="230.0" style="-fx-font-family: Arial;" text="Password" />
-            <Label layoutX="5.0" layoutY="266.0" style="-fx-font-family: Arial;" text="Phone Number" />
             <TextField fx:id="email" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="241.0" promptText="example@gmail.com" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <TextField fx:id="phoneNum" layoutX="91.0" layoutY="261.0" prefHeight="27.0" prefWidth="241.0" promptText="xxx-xxx-xxx" styleClass="btn" stylesheets="@../../../css/signup.css" />
             <Button fx:id="signUpBtn" layoutX="99.0" layoutY="321.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="274.0" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Sign up" textFill="WHITE" />
             <Label layoutX="124.0" layoutY="362.0" style="-fx-text-fill: black;" text="Already have an account?">
                <font>
