--- a/src/main/resources/com/example/knk_grupi22/dashboard.fxml
+++ b/src/main/resources/com/example/knk_grupi22/dashboard.fxml
@@ -1,39 +1,183 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.knk_grupi22.DashboardController">
-   <left>
-      <AnchorPane prefHeight="790.0" prefWidth="308.0" BorderPane.alignment="CENTER">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DashboardController">
+   <children>
+      <AnchorPane maxWidth="250.0" prefHeight="700.0" prefWidth="252.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" StackPane.alignment="TOP_LEFT">
          <children>
-            <Button layoutX="78.0" layoutY="256.0" mnemonicParsing="false" text="Dashboard" />
-            <FontAwesomeIcon glyphName="HOME" layoutX="34.0" layoutY="282.0" size="3em" />
-            <Button fx:id="logout_Btn" layoutX="13.0" layoutY="714.0" mnemonicParsing="false" onAction="#logout" prefHeight="40.0" prefWidth="39.0" style="-fx-cursor: hand;">
+            <Button layoutX="1.0" layoutY="252.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="263.0" style="-fx-background-color: linear-gradient(to left, #11998e, #38ef7d); -fx-cursor: hand;" text="Dashboard" textFill="WHITE">
+               <graphic>
+                  <FontAwesomeIcon fill="WHITE" glyphName="HOME" size="1.7em" />
+               </graphic>
+               <font>
+                  <Font name="Tahoma Bold" size="20.0" />
+               </font>
+            </Button>
+            <Button layoutY="312.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="263.0" style="-fx-background-color: linear-gradient(to left, #11998e, #38ef7d); -fx-cursor: hand;" text="Manage" textFill="WHITE">
+               <graphic>
+                  <FontAwesomeIcon fill="WHITE" glyphName="COG" size="1.7em" />
+               </graphic>
+               <font>
+                  <Font name="Tahoma Bold" size="20.0" />
+               </font>
+            </Button>
+            <Label layoutX="24.0" layoutY="101.0" text="WELCOME ADMIN" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font></Label>
+            <Button fx:id="logout_Btn" layoutX="33.0" layoutY="624.0" mnemonicParsing="false" onAction="#logout" prefHeight="37.0" prefWidth="38.0" style="-fx-cursor: hand;">
                <graphic>
                   <FontAwesomeIcon glyphName="SIGN_OUT" size="2em" />
                </graphic>
             </Button>
-            <Label layoutX="67.0" layoutY="720.0" text="Sign Out">
+            <Label layoutX="86.0" layoutY="630.0" prefHeight="26.0" prefWidth="93.0" text="Sign out" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="94.0" layoutY="88.0" text="Welcome">
-               <font>
-                  <Font name="Tahoma Bold" size="26.0" />
-               </font>
-            </Label>
-            <Label fx:id="welcomeName" layoutX="110.0" layoutY="122.0" text="Admin">
-               <font>
-                  <Font name="Tahoma Bold" size="26.0" />
+                  <Font name="Tahoma Bold" size="20.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-   </left>
-</BorderPane>
+      <HBox maxHeight="180.0" maxWidth="1034.0" prefHeight="180.0" prefWidth="1034.0" style="-fx-background-color: linear-gradient(to left, #3E5151, #DECBA4); -fx-background-radius: 15px;;" styleClass="shadow" stylesheets="@../../../css/dashboard.css">
+         <children>
+            <AnchorPane maxHeight="150.0" prefHeight="150.0" prefWidth="284.0" stylesheets="@../../../css/dashboard.css">
+               <HBox.margin>
+                  <Insets left="15.0" top="13.0" />
+               </HBox.margin>
+               <children>
+                  <Label layoutX="34.0" layoutY="95.0" prefHeight="38.0" prefWidth="167.0" text="Të punësuarit total:" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIcon fill="WHITE" glyphName="USERS" layoutX="97.0" layoutY="65.0" size="5em" />
+                  <Label layoutX="243.0" layoutY="104.0" text="0" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="18.0" />
+                     </font></Label>
+               </children>
+               <styleClass>
+                  <String fx:value="shadow" />
+                  <String fx:value="card" />
+               </styleClass>
+            </AnchorPane>
+            <AnchorPane layoutX="30.0" layoutY="21.0" maxHeight="150.0" prefHeight="150.0" prefWidth="284.0" stylesheets="@../../../css/dashboard.css">
+               <children>
+                  <Label layoutX="15.0" layoutY="95.0" prefHeight="38.0" prefWidth="218.0" text="Të punësuarit meshkuj:" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIcon fill="WHITE" glyphName="MALE" layoutX="124.0" layoutY="65.0" size="5em" />
+                  <Label layoutX="243.0" layoutY="103.0" text="0" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+               <HBox.margin>
+                  <Insets left="70.0" top="13.0" />
+               </HBox.margin>
+               <styleClass>
+                  <String fx:value="shadow" />
+                  <String fx:value="card" />
+               </styleClass>
+            </AnchorPane>
+            <AnchorPane layoutX="373.0" layoutY="21.0" maxHeight="150.0" prefHeight="150.0" prefWidth="284.0" stylesheets="@../../../css/dashboard.css">
+               <children>
+                  <Label layoutX="15.0" layoutY="95.0" prefHeight="38.0" prefWidth="218.0" text="Të punësuaret femra:" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIcon fill="WHITE" glyphName="FEMALE" layoutX="124.0" layoutY="65.0" size="5em" />
+                  <Label layoutX="243.0" layoutY="103.0" text="0" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+               <HBox.margin>
+                  <Insets left="70.0" top="13.0" />
+               </HBox.margin>
+               <styleClass>
+                  <String fx:value="shadow" />
+                  <String fx:value="card" />
+               </styleClass>
+            </AnchorPane>
+         </children>
+         <StackPane.margin>
+            <Insets left="270.0" right="5.0" top="-500.0" />
+         </StackPane.margin>
+      </HBox>
+      <AnchorPane maxHeight="450.0" maxWidth="492.0" prefHeight="450.0" prefWidth="492.0" stylesheets="@../../../css/dashboard.css">
+         <StackPane.margin>
+            <Insets left="-240.0" top="200.0" />
+         </StackPane.margin>
+         <styleClass>
+            <String fx:value="shadow" />
+            <String fx:value="chart" />
+         </styleClass>
+         <children>
+            <BarChart layoutX="8.0" layoutY="25.0" title="TOTALI I TE PUNESUARVE">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
+         </children>
+      </AnchorPane>
+      <AnchorPane maxHeight="200.0" maxWidth="450.0" prefHeight="200.0" prefWidth="200.0" stylesheets="@../../../css/dashboard.css">
+         <StackPane.margin>
+            <Insets left="800.0" top="-50.0" />
+         </StackPane.margin>
+         <styleClass>
+            <String fx:value="shadow" />
+            <String fx:value="chart" />
+         </styleClass>
+         <children>
+            <BarChart layoutX="5.0" layoutY="19.0" prefHeight="166.0" prefWidth="468.0" title="TE PUNESUARIT MESHKUJ">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="819.0" layoutY="236.0" maxHeight="200.0" maxWidth="450.0" prefHeight="200.0" prefWidth="200.0" stylesheets="@../../../css/dashboard.css">
+         <styleClass>
+            <String fx:value="shadow" />
+            <String fx:value="chart" />
+         </styleClass>
+         <children>
+            <BarChart layoutX="5.0" layoutY="19.0" prefHeight="166.0" prefWidth="468.0" title="TE PUNESUARET FEMRA">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
+         </children>
+         <StackPane.margin>
+            <Insets left="800.0" top="450.0" />
+         </StackPane.margin>
+      </AnchorPane>
+   </children>
+</StackPane>
+
