--- a/src/main/resources/com/example/knk_grupi22/dashboard.fxml
+++ b/src/main/resources/com/example/knk_grupi22/dashboard.fxml
@@ -3,6 +3,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -50,7 +51,7 @@
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Label layoutX="74.0" layoutY="93.0" text="ADMIN" textFill="WHITE">
+                  <Label layoutX="80.0" layoutY="93.0" text="ADMIN" textFill="WHITE">
                      <font>
                         <Font name="Georgia Bold" size="30.0" />
                      </font>
@@ -181,7 +182,7 @@
          <children>
             <AnchorPane maxWidth="265.0" prefHeight="700.0" prefWidth="265.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);">
                <children>
-                  <Button fx:id="dashboard_Btn1" layoutX="24.0" layoutY="252.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: linear-gradient(to left, #373B44, #4286f4); -fx-cursor: hand;" text="Dashboard" textFill="WHITE">
+                  <Button fx:id="dashboard_Btn1" layoutX="24.0" layoutY="252.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" styleClass="nav-button" stylesheets="@../../../css/dashboard.css" text="Dashboard" textFill="WHITE">
                      <graphic>
                         <FontAwesomeIcon fill="WHITE" glyphName="HOME" size="1.7em" />
                      </graphic>
@@ -189,7 +190,7 @@
                         <Font name="Tahoma Bold" size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="manage_Btn1" layoutX="24.0" layoutY="312.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: linear-gradient(to left, #373B44, #4286f4); -fx-cursor: hand;" text="Manage" textFill="WHITE">
+                  <Button fx:id="manage_Btn1" layoutX="24.0" layoutY="312.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" styleClass="nav-button" stylesheets="@../../../css/dashboard.css" text="Manage" textFill="WHITE">
                      <graphic>
                         <FontAwesomeIcon fill="WHITE" glyphName="COG" size="1.7em" />
                      </graphic>
@@ -197,9 +198,9 @@
                         <Font name="Tahoma Bold" size="20.0" />
                      </font>
                   </Button>
-                  <Label layoutX="24.0" layoutY="101.0" text="WELCOME ADMIN" textFill="WHITE">
+                  <Label layoutX="47.0" layoutY="47.0" text="WELCOME," textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="Georgia Bold" size="30.0" />
                      </font>
                   </Label>
                   <Button fx:id="logout_Btn1" alignment="CENTER" layoutX="24.0" layoutY="624.0" mnemonicParsing="false" onAction="#logout" prefHeight="43.0" prefWidth="218.0" style="-fx-cursor: hand; -fx-background-color: linear-gradient(to left, #373B44, #4286f4);" text="Sign Out" textFill="WHITE">
@@ -207,6 +208,11 @@
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
                   </Button>
+                  <Label layoutX="80.0" layoutY="93.0" text="ADMIN" textFill="WHITE">
+                     <font>
+                        <Font name="Georgia Bold" size="30.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="264.0" layoutY="150.0" prefHeight="700.0" prefWidth="1036.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="264.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -223,7 +229,7 @@
                               <String fx:value="white-bg" />
                            </styleClass>
                            <children>
-                              <TableView fx:id="tableView_Employed" layoutX="7.0" layoutY="69.0" prefHeight="237.0" prefWidth="1002.0" styleClass="table" stylesheets="@../../../css/dashboard.css">
+                              <TableView fx:id="tableView_Employed" layoutX="7.0" layoutY="69.0" onMouseClicked="#showDataOnTextfields" prefHeight="237.0" prefWidth="1002.0" styleClass="table" stylesheets="@../../../css/dashboard.css">
                                  <columns>
                                     <TableColumn fx:id="tableView_Emri" prefWidth="124.00003051757812" style="-fx-text-alignment: center;" text="Emri" />
                                     <TableColumn fx:id="tableView_Mbiemri" prefWidth="126.39996337890625" text="Mbiemri" />
@@ -262,26 +268,42 @@
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
                            </font></Label>
-                        <ComboBox fx:id="comboBox_Titulli" layoutX="656.0" layoutY="399.0" prefHeight="36.0" prefWidth="198.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" />
-                        <ComboBox fx:id="comboBox_Drejtimi" layoutX="656.0" layoutY="451.0" prefHeight="36.0" prefWidth="198.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" />
+                        <ComboBox fx:id="comboBox_Titulli" layoutX="656.0" layoutY="399.0" prefHeight="36.0" prefWidth="198.0" promptText="Choose" styleClass="combo-box" stylesheets="@../../../css/dashboard.css" />
+                        <ComboBox fx:id="comboBox_Drejtimi" layoutX="656.0" layoutY="451.0" prefHeight="36.0" prefWidth="198.0" promptText="Choose" stylesheets="@../../../css/dashboard.css">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="combo-box" />
+                           </styleClass></ComboBox>
                         <Label layoutX="151.0" layoutY="405.0" text="Mbiemri" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tf_Mbiemri" layoutX="249.0" layoutY="400.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css" />
+                        <TextField fx:id="tf_Mbiemri" layoutX="249.0" layoutY="400.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font></TextField>
                         <Label layoutX="131.0" layoutY="457.0" text="Profesioni" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tf_Profesioni" layoutX="249.0" layoutY="452.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css" />
+                        <TextField fx:id="tf_Profesioni" layoutX="249.0" layoutY="452.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font></TextField>
                         <Label layoutX="545.0" layoutY="347.0" text="Kompania" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tf_Kompania" layoutX="656.0" layoutY="342.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css" />
+                        <TextField fx:id="tf_Kompania" layoutX="656.0" layoutY="342.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font></TextField>
                         <Button fx:id="shtoButoni" layoutX="69.0" layoutY="598.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="254.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" text="Shto" textFill="#109152">
                            <font>
                               <Font name="System Bold" size="15.0" />
@@ -297,17 +319,17 @@
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <RadioButton fx:id="radio_Mashkull" layoutX="249.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="101.0" stylesheets="@../../../css/dashboard.css" text="Mashkull" textFill="#109152">
+                        <RadioButton fx:id="radio_Mashkull" layoutX="249.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="91.0" stylesheets="@../../../css/dashboard.css" text="Mashkull" textFill="#109152">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="radio_Femer" layoutX="341.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="82.0" text="Femër" textFill="#109152">
+                        <RadioButton fx:id="radio_Femer" layoutX="348.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Femër" textFill="#109152">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="radio_Other" layoutX="417.0" layoutY="507.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="83.0" text="Tjetër" textFill="#109152">
+                        <RadioButton fx:id="radio_Other" layoutX="422.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="83.0" text="Tjetër" textFill="#109152">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -325,4 +347,3 @@
       </AnchorPane>
    </children>
 </StackPane>
-
