--- a/src/main/resources/com/example/knk_grupi22/dashboard.fxml
+++ b/src/main/resources/com/example/knk_grupi22/dashboard.fxml
@@ -3,12 +3,14 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -17,11 +19,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
-
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DashboardController">
    <children>
-      <AnchorPane fx:id="dashboardPane" prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane fx:id="dashboardPane" prefHeight="200.0" prefWidth="200.0" visible="false">
          <children>
             <AnchorPane prefHeight="700.0" prefWidth="265.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);">
                <children>
@@ -51,7 +51,7 @@
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Label layoutX="74.0" layoutY="93.0" text="ADMIN" textFill="WHITE">
+                  <Label layoutX="80.0" layoutY="93.0" text="ADMIN" textFill="WHITE">
                      <font>
                         <Font name="Georgia Bold" size="30.0" />
                      </font>
@@ -178,11 +178,11 @@
             </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="managePane" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" visible="false">
+      <AnchorPane fx:id="managePane" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
          <children>
             <AnchorPane maxWidth="265.0" prefHeight="700.0" prefWidth="265.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);">
                <children>
-                  <Button fx:id="dashboard_Btn1" layoutX="24.0" layoutY="252.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: linear-gradient(to left, #373B44, #4286f4); -fx-cursor: hand;" text="Dashboard" textFill="WHITE">
+                  <Button fx:id="dashboard_Btn1" layoutX="24.0" layoutY="252.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" styleClass="nav-button" stylesheets="@../../../css/dashboard.css" text="Dashboard" textFill="WHITE">
                      <graphic>
                         <FontAwesomeIcon fill="WHITE" glyphName="HOME" size="1.7em" />
                      </graphic>
@@ -190,7 +190,7 @@
                         <Font name="Tahoma Bold" size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="manage_Btn1" layoutX="24.0" layoutY="312.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: linear-gradient(to left, #373B44, #4286f4); -fx-cursor: hand;" text="Manage" textFill="WHITE">
+                  <Button fx:id="manage_Btn1" layoutX="24.0" layoutY="312.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" styleClass="nav-button" stylesheets="@../../../css/dashboard.css" text="Manage" textFill="WHITE">
                      <graphic>
                         <FontAwesomeIcon fill="WHITE" glyphName="COG" size="1.7em" />
                      </graphic>
@@ -198,9 +198,9 @@
                         <Font name="Tahoma Bold" size="20.0" />
                      </font>
                   </Button>
-                  <Label layoutX="24.0" layoutY="101.0" text="WELCOME ADMIN" textFill="WHITE">
+                  <Label layoutX="47.0" layoutY="47.0" text="WELCOME," textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="Georgia Bold" size="30.0" />
                      </font>
                   </Label>
                   <Button fx:id="logout_Btn1" alignment="CENTER" layoutX="24.0" layoutY="624.0" mnemonicParsing="false" onAction="#logout" prefHeight="43.0" prefWidth="218.0" style="-fx-cursor: hand; -fx-background-color: linear-gradient(to left, #373B44, #4286f4);" text="Sign Out" textFill="WHITE">
@@ -208,6 +208,11 @@
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
                   </Button>
+                  <Label layoutX="80.0" layoutY="93.0" text="ADMIN" textFill="WHITE">
+                     <font>
+                        <Font name="Georgia Bold" size="30.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="264.0" layoutY="150.0" prefHeight="700.0" prefWidth="1036.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="264.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -224,14 +229,15 @@
                               <String fx:value="white-bg" />
                            </styleClass>
                            <children>
-                              <TableView layoutX="7.0" layoutY="69.0" prefHeight="237.0" prefWidth="1002.0" styleClass="table" stylesheets="@../../../css/dashboard.css">
+                              <TableView fx:id="tableView_Employed" layoutX="7.0" layoutY="69.0" onMouseClicked="#showDataOnTextfields" prefHeight="237.0" prefWidth="1002.0" styleClass="table" stylesheets="@../../../css/dashboard.css">
                                  <columns>
-                                    <TableColumn prefWidth="124.00003051757812" text="Emri" />
-                                    <TableColumn prefWidth="126.39996337890625" text="Mbiemri" />
-                                    <TableColumn prefWidth="118.39996337890625" text="Titulli" />
-                                    <TableColumn prefWidth="193.5999755859375" text="Drejtimi" />
-                                    <TableColumn prefWidth="271.199951171875" text="Profesioni" />
-                                    <TableColumn prefWidth="189.5999755859375" text="Kompania" />
+                                    <TableColumn fx:id="tableView_Emri" prefWidth="110.39999389648438" style="-fx-text-alignment: center;" text="Emri" />
+                                    <TableColumn fx:id="tableView_Mbiemri" prefWidth="116.80001831054688" text="Mbiemri" />
+                                    <TableColumn fx:id="tableView_Gjinia" prefWidth="88.80001831054688" text="Gjinia" />
+                                    <TableColumn fx:id="tableView_Titulli" prefWidth="130.39996337890625" text="Titulli" />
+                                    <TableColumn fx:id="tableView_Drejtimi" prefWidth="266.4000244140625" text="Drejtimi" />
+                                    <TableColumn fx:id="tableView_Profesioni" prefWidth="150.40008544921875" text="Profesioni" />
+                                    <TableColumn fx:id="tableView_Kompania" prefWidth="140.800048828125" text="Kompania" />
                                  </columns>
                               </TableView>
                               <TextField alignment="CENTER_RIGHT" layoutX="671.0" layoutY="18.0" prefHeight="36.0" prefWidth="335.0" promptText="Search" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
@@ -240,7 +246,8 @@
                                  </padding>
                                  <font>
                                     <Font name="System Bold" size="14.0" />
-                                 </font></TextField>
+                                 </font>
+                              </TextField>
                               <FontAwesomeIcon glyphName="SEARCH" layoutX="975.0" layoutY="43.0" size="1.7em" text="" />
                            </children>
                         </AnchorPane>
@@ -249,7 +256,11 @@
                               <Font name="Tahoma Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="249.0" layoutY="343.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css" />
+                        <TextField fx:id="tf_Emri" layoutX="249.0" layoutY="343.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </TextField>
                         <Label layoutX="588.0" layoutY="404.0" text="Titulli" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
@@ -258,42 +269,83 @@
                         <Label layoutX="562.0" layoutY="456.0" text="Drejtimi" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
-                           </font></Label>
-                        <ComboBox layoutX="656.0" layoutY="399.0" prefHeight="36.0" prefWidth="198.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" />
-                        <ComboBox layoutX="656.0" layoutY="451.0" prefHeight="36.0" prefWidth="198.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="comboBox_Titulli" layoutX="656.0" layoutY="399.0" prefHeight="36.0" prefWidth="198.0" promptText="Choose" styleClass="combo-box" stylesheets="@../../../css/dashboard.css" />
+                        <ComboBox fx:id="comboBox_Drejtimi" layoutX="656.0" layoutY="451.0" prefHeight="36.0" prefWidth="198.0" promptText="Choose" stylesheets="@../../../css/dashboard.css">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="combo-box" />
+                           </styleClass>
+                        </ComboBox>
                         <Label layoutX="151.0" layoutY="405.0" text="Mbiemri" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="249.0" layoutY="400.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css" />
+                        <TextField fx:id="tf_Mbiemri" layoutX="249.0" layoutY="400.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </TextField>
                         <Label layoutX="131.0" layoutY="457.0" text="Profesioni" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="249.0" layoutY="452.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css" />
+                        <TextField fx:id="tf_Profesioni" layoutX="249.0" layoutY="452.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </TextField>
                         <Label layoutX="545.0" layoutY="347.0" text="Kompania" textFill="#109152">
                            <font>
                               <Font name="Tahoma Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="656.0" layoutY="342.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css" />
-                        <Button layoutX="68.0" layoutY="555.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="254.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" text="Add" textFill="#109152">
+                        <TextField fx:id="tf_Kompania" layoutX="656.0" layoutY="342.0" prefHeight="36.0" prefWidth="198.0" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </TextField>
+                        <Button fx:id="shtoButoni" layoutX="69.0" layoutY="598.0" mnemonicParsing="false" onAction="#addEmployed" prefHeight="47.0" prefWidth="254.0" style="-fx-cursor: hand;" styleClass="btn" stylesheets="@../../../css/dashboard.css" text="Shto" textFill="#109152">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <Button layoutX="362.0" layoutY="555.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="254.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" text="Delete" textFill="RED">
+                        <Button fx:id="fshijButoni" layoutX="363.0" layoutY="598.0" mnemonicParsing="false" onAction="#deleteEmployed" prefHeight="47.0" prefWidth="254.0" style="-fx-cursor: hand;" styleClass="btn" stylesheets="@../../../css/dashboard.css" text="Fshij" textFill="RED">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <Button layoutX="655.0" layoutY="556.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="254.0" styleClass="btn" stylesheets="@../../../css/dashboard.css" text="Update" textFill="#00dfff">
+                        <Button fx:id="perditesoButoni" layoutX="656.0" layoutY="599.0" mnemonicParsing="false" onAction="#updateEmployed" prefHeight="47.0" prefWidth="254.0" style="-fx-cursor: hand;" styleClass="btn" stylesheets="@../../../css/dashboard.css" text="Përditëso" textFill="#00dfff">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
+                        <RadioButton fx:id="radio_Mashkull" layoutX="249.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="91.0" stylesheets="@../../../css/dashboard.css" text="Mashkull" textFill="#109152">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton fx:id="radio_Femer" layoutX="348.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Femër" textFill="#109152">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton fx:id="radio_Other" layoutX="422.0" layoutY="508.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="83.0" text="Tjetër" textFill="#109152">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </RadioButton>
+                        <Label layoutX="173.0" layoutY="508.0" text="Gjinia" textFill="#109152">
+                           <font>
+                              <Font name="Tahoma Bold" size="20.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </children>
