--- a/src/main/resources/com/example/knk_grupi22/sign-up.fxml
+++ b/src/main/resources/com/example/knk_grupi22/sign-up.fxml
@@ -39,8 +39,8 @@
                <font>
                   <Font name="Arial" size="12.0" />
                </font></Label>
-            <TextField fx:id="firstName" layoutX="91.0" layoutY="103.0" prefHeight="26.0" prefWidth="146.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <TextField fx:id="lastName" layoutX="307.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="firstName" layoutX="91.0" layoutY="103.0" prefHeight="26.0" prefWidth="146.0" promptText="First Name" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="lastName" layoutX="307.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" promptText="Last Name" styleClass="btn" stylesheets="@../../../css/signup.css" />
             <FontAwesomeIcon fill="#109152" glyphName="USER_PLUS" layoutX="212.0" layoutY="65.0" size="5em" />
             <Label layoutX="49.0" layoutY="149.0" prefHeight="18.0" prefWidth="34.0" style="-fx-font-family: Arial;" text="Email" />
             <Label layoutX="33.0" layoutY="230.0" style="-fx-font-family: Arial;" text="Password" />
@@ -56,8 +56,8 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
-            <PasswordField fx:id="password" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <TextField fx:id="username" layoutX="91.0" layoutY="186.0" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <PasswordField fx:id="password" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" promptText="password" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="username" layoutX="91.0" layoutY="186.0" prefHeight="27.0" prefWidth="241.0" promptText="username" styleClass="btn" stylesheets="@../../../css/signup.css" />
             <Label layoutX="32.0" layoutY="191.0" style="-fx-font-family: Arial;" text="Username" />
             <TextField fx:id="textfieldPassword" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../../../css/signup.css" visible="false" />
             <Button fx:id="buttonShowPassword" layoutX="303.0" layoutY="226.0" mnemonicParsing="false" onAction="#showPassword" prefHeight="26.0" prefWidth="30.0" style="-fx-background-color: transparent; -fx-cursor: hand;">
@@ -75,6 +75,3 @@
       </AnchorPane>
    </center>
 </BorderPane>
-
-
-
