--- a/src/main/resources/com/example/knk_grupi22/login.fxml
+++ b/src/main/resources/com/example/knk_grupi22/login.fxml
@@ -51,40 +51,40 @@
                </graphic>
             </Button>
             <FontAwesomeIcon fill="#109152" glyphName="USERS" layoutX="106.0" layoutY="82.0" size="5em" />
-            <RadioButton fx:id="language_AL_button" layoutX="146.0" layoutY="360.0" mnemonicParsing="false" text="AL" textFill="#109152">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </RadioButton>
-            <RadioButton fx:id="language_EN_button" layoutX="242.0" layoutY="360.0" mnemonicParsing="false" text="EN" textFill="#109152">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </RadioButton>
-            <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="111.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../img/download.jpg" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="211.0" layoutY="363.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../img/downloadd.png" />
-               </image>
-            </ImageView>
          </children>
       </AnchorPane>
    </right>
    <center>
       <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="95.0" layoutY="248.0" text="E-Alumni" textFill="WHITE">
+            <Label layoutX="95.0" layoutY="294.0" text="E-Alumni" textFill="WHITE">
                <font>
                   <Font name="Arial" size="27.0" />
                </font>
             </Label>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="75.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="75.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../img/fiek-logo-photoaidcom-cropped.jpg" />
+               </image>
+            </ImageView>
+            <RadioButton fx:id="language_AL_button" layoutX="45.0" layoutY="6.0" mnemonicParsing="false" text="AL" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </RadioButton>
+            <RadioButton fx:id="language_EN_button" layoutX="145.0" layoutY="6.0" mnemonicParsing="false" text="EN" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </RadioButton>
+            <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="10.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../img/download.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="108.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../img/downloadd.png" />
                </image>
             </ImageView>
          </children>
